--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#000000"
     tools:context="com.example.asal.firebaseauthdemo.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_weight="1">
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="Welcome"
+           android:textSize="25sp"
+           android:textStyle="bold"
+           android:textColor="#d0ed9b"
+           android:layout_gravity="center"
+           android:gravity="center"/>
 
-</android.support.constraint.ConstraintLayout>
+   </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:weightSum="1">
+
+        <EditText
+            android:inputType="textEmailAddress"
+           android:background="#d0ed9b"
+            android:textSize="23sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editTxtEmail"
+           android:layout_marginLeft="50sp"
+           android:layout_marginRight="50sp"
+           android:layout_marginBottom="20sp"
+           android:layout_marginTop="40sp"
+            android:hint="Enter An Email"
+           />
+        <EditText
+            android:inputType="textPassword"
+            android:textSize="23sp"
+            android:background="#d0ed9b"
+            android:layout_marginLeft="50sp"
+            android:layout_marginRight="50sp"
+            android:layout_marginBottom="60sp"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editTxtPassword"
+
+            android:hint="Enter A Password"
+            />
+
+        <Button
+            android:background="#d0ed9b"
+            android:id="@+id/btnRegister"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Register"/>
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewAlreadyRegister"
+            android:text="Already Register? Sign in Here ..."
+            android:textSize="15sp"
+            android:textColor="#d0ed9b"
+
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+
+</LinearLayout>
