--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#000000"
+    android:onClick="hideKeyboard"
     tools:context="com.example.asal.firebaseauthdemo.MainActivity">
 
-   <LinearLayout
+
+     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
@@ -83,7 +85,6 @@
             android:text="Already Register? Sign in Here ..."
             android:textSize="15sp"
             android:textColor="#d0ed9b"
-
             android:gravity="center"/>
 
     </LinearLayout>
